--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ img {
 /** Header **/
 
 .fondo {
-    background-image: url(/img/Fondo.webp);
+    background-image: url(/img/fondo.webp);
     background-color: rgba(0, 0, 0, 0.8);
     height: 65rem;
     background-size: cover;
